2010-04-16  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* MANIFEST: Added misc/ldap_auth module.

	* misc/CMakeLists.txt: Allow to enable ldap support at configure time
	- use -DBUILD_WITH_LDAP=ON to activate. Added check for openldap in
	that case, include ldap_auth module and add definition.

2010-04-16  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* base/CMakeLists.txt, hg/CMakeLists.txt, misc/CMakeLists.txt,
	nasl/CMakeLists.txt, omp/CMakeLists.txt: Unified formatting of
	CMakeLists to allow easier reading and extraction of macros.

2010-04-16  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* hg/hg_utils.c (hg_get_name_from_ip): Doc added. Formatting.

	* misc/bpf_share.h, misc/proctitle.c, nasl/nasl.c, omp/xml.c:
	Cosmetics.

2010-04-16  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	* configure.in: Added check for libuuid.

	* configure: Regenerated.

2010-04-15  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	Moved authentication/uuid code from openvas-manager to openvas_auth
	module.

	* misc/openvas_auth.c: Added openvas_uuid include.
	(openvas_user_uuid): Moved from openvas-manager/manage_sql.c.
	(openvas_authenticate_uuid): Moved from openvas-manager/manage_sql.c.

	* misc/openvas_auth.h (openvas_user_uuid, openvas_authenticate_uuid):
	Added headers accordingly.

2010-04-15  Felix Wolfsteller <felix.wolfsteller@greenbone.net>

	Moved duplicate code from openvas-manager and
	openvas-administrator to new module misc/openvas_uuid .

	* misc/openvas_uuid.h, misc/openvas_uuid.c: New files, containing
	duplicate code from openvas-manager/manage.c and
	openvas-administrator/admin.c . Reflect module change in function name
	change.

	* MANIFEST: Added new module.

	* misc/CMakeLists.txt: Added check for uuid library, added new module,
	install new header.

2010-04-13  Stephan Kleine

	* hg/CMakeLists.txt: Fix build with no-undefined.

	* misc/CMakeLists.txt: Fix build with no-undefined.
